Amend index handler to check for session cookie and render catalog method selection step if present.

--- a/service/views/html/partial/header.html
+++ b/service/views/html/partial/header.html
@@ -16,7 +16,7 @@
                 text-align: center;
                 margin: 0 auto;
             }
-            button.cta {
+            .cta {
                 width: 100%;
                 font-size: 1.2rem;
                 background: #3c46ff;
@@ -24,9 +24,15 @@
                 padding: 0.5rem;
                 border: 0;
                 border-radius: 5px;
+                box-sizing: border-box;
+                margin: 0 auto 0.5rem;
             }
-            button.cta:hover {
+            .cta:hover {
                 cursor: pointer;
+            }
+            a.cta {
+                text-decoration: none;
+                display: inline-block;
             }
             input.form-control {
                 width: 100%;
@@ -41,6 +47,9 @@
                 margin: 0 auto;
                 overflow: hidden;
                 padding: 5px;
+            }
+            .start-again-container {
+                width: 200px;
             }
         </style>
     </head>
