Move session token validation to middleware method

--- a/service/views/html/catalog-method-selection.html
+++ b/service/views/html/catalog-method-selection.html
@@ -8,10 +8,10 @@
         </div>
         <p>{{.ImageFilesCount}} image file(s) to process</p>
         <h1>How would you like to catalog your images?</h1>
-        <form method="post" action="/catalog-by-date">
+        <form method="post" action="/catalog/by-date">
             <button type="submit" class="cta">By Creation Date</button>
         </form>
-        <a href="/catalog-by-tag" class="cta">By Custom Tags</a>
+        <a href="/catalog/by-tag" class="cta">By Custom Tags</a>
     </div>
     {{template "partial.footer" .}}
 {{end}}
