Use session token checker middleware to add value of directory path to context.
Add error message to `catalog-method-selection` template if no image files are present in specified directory.

--- a/service/views/html/partial/header.html
+++ b/service/views/html/partial/header.html
@@ -51,6 +51,12 @@
             .start-again-container {
                 width: 200px;
             }
+            .errors {
+                border: 3px solid #a30;
+                color: #a30;
+                background: #ff9f97;
+                font-weight: bold;
+            }
         </style>
     </head>
     <body>
