--- a/service/views/html/catalog-method-selection.html
+++ b/service/views/html/catalog-method-selection.html
@@ -6,12 +6,21 @@
                 <button type="submit" class="cta">Start Again</button>
             </form>
         </div>
-        <p>{{.ImageFilesCount}} image file(s) to process</p>
-        <h1>How would you like to catalog your images?</h1>
-        <form method="post" action="/catalog/by-date">
-            <button type="submit" class="cta">By Creation Date</button>
-        </form>
-        <a href="/catalog/by-tag" class="cta">By Custom Tags</a>
+        {{if .ImageFilesCount}}
+            <p>{{.DirPath}}</p>
+            <p>Found {{.ImageFilesCount}} image file(s) to process</p>
+            <h1>How would you like to catalog your images?</h1>
+            <form method="post" action="/catalog/by-date">
+                <button type="submit" class="cta">By Creation Date</button>
+            </form>
+            <a href="/catalog/by-tag" class="cta">By Custom Tags</a>
+        {{else}}
+            <div class="errors">
+                <p>{{.DirPath}}</p>
+                <p>No images found to process :(</p>
+                <p>Please select "Start Again" and specify an alternative directory</p>
+            </div>
+        {{end}}
     </div>
     {{template "partial.footer" .}}
 {{end}}
