--- a/service/views/html/partial/header.html
+++ b/service/views/html/partial/header.html
@@ -55,6 +55,8 @@
                 border: 3px solid #a30;
                 color: #a30;
                 background: #ff9f97;
+            }
+            .bold {
                 font-weight: bold;
             }
         </style>
