Move "Start Again" cta to header template.
Add flag to base Page object for indicating whether or not this should be rendered.

--- a/service/views/html/index.html
+++ b/service/views/html/index.html
@@ -1,6 +1,6 @@
 {{define "index"}}
     {{template "partial.header" .}}
-    <div class="container file-upload">
+    <div class="content file-upload">
         <h1>Where are your images stored?</h1>
         <p>Make sure it's the absolute path to the images directory on your local machine.</p>
         <form method="post" action="/">
