--- a/service/views/html/error.html
+++ b/service/views/html/error.html
@@ -1,6 +1,6 @@
 {{define "error"}}
     {{template "partial.header" .}}
-    <div class="container error">
+    <div class="content error">
         <h1>{{.Error.Code}}</h1>
         <h2>{{.Error.Message}}</h2>
         <p>{{.Error.Detail}}</p>
