Update CTA label

--- a/service/views/html/catalog-method-selection.html
+++ b/service/views/html/catalog-method-selection.html
@@ -6,7 +6,7 @@
             <p>Found {{.ImageFilesCount}} image file(s) to process</p>
             <h1>How would you like to catalog your images?</h1>
             <form method="post" action="/catalog/by-date">
-                <button type="submit" class="cta">By Creation Date</button>
+                <button type="submit" class="cta">By Date in Filename</button>
             </form>
             <a href="/catalog/by-tag" class="cta">By Custom Tags</a>
         {{else}}
