Add endpoint and handler for serving image files

--- a/service/views/html/catalog-by-tag.html
+++ b/service/views/html/catalog-by-tag.html
@@ -2,6 +2,7 @@
     {{template "partial.header" .}}
     <div class="content catalog-by-tag">
         <h1>Hello World</h1>
+        <img src="/file/{{.ImageFileName}}">
     </div>
     {{template "partial.footer" .}}
 {{end}}
