Add controls for cataloging images by tag.

--- a/service/views/html/catalog-by-tag.html
+++ b/service/views/html/catalog-by-tag.html
@@ -1,8 +1,38 @@
 {{define "catalog-by-tag"}}
     {{template "partial.header" .}}
     <div class="content catalog-by-tag">
-        <h1>Hello World</h1>
-        <img src="/file/{{.ImageFileName}}">
+        {{if .ImageFilesCount}}
+            <p class="bold">{{.DirPath}}</p>
+            <p>{{.ImageFilesCount}} image file(s) left to process...</p>
+            <p class="bold">{{.ImageFileName}}</p>
+            <h1>Give it a tag...</h1>
+            <div class="image-container">
+                <img src="/file/{{.ImageFileName}}">
+            </div>
+            <div class="tag-container">
+                {{$imageFileName := .ImageFileName}}
+                {{range $tag, $count := .TagsWithCount}}
+                    <div class="tag-wrapper">
+                        <form method="post">
+                            <input type="hidden" name="file_name" value="{{$imageFileName}}" />
+                            <input type="hidden" name="tag" value="{{$tag}}" />
+                            <button type="submit" class="cta">{{$tag}} [{{$count}}]</button>
+                        </form>
+                    </div>
+                {{end}}
+                <div class="tag-wrapper custom">
+                    <form method="post">
+                        <input type="hidden" name="file_name" value="{{.ImageFileName}}" />
+                        <input type="text" name="tag" value="" placeholder="Custom..." />
+                        <button type="submit" class="cta">Tag</button>
+                    </form>
+                </div>
+            </div>
+        {{else}}
+            <h1>Done!</h1>
+            <!-- TODO - aesthetics -->
+        {{end}}
+
     </div>
     {{template "partial.footer" .}}
 {{end}}
