Implement rendering of completion message for cataloging by date and by tag.

--- a/service/views/html/catalog-by-tag.html
+++ b/service/views/html/catalog-by-tag.html
@@ -1,7 +1,9 @@
 {{define "catalog-by-tag"}}
     {{template "partial.header" .}}
     <div class="content catalog-by-tag">
-        {{if .ImageFilesCount}}
+        {{if .CompletionMessage}}
+            {{template "partial.completion" .CompletionMessage}}
+        {{else}}
             <p class="bold">{{.DirPath}}</p>
             <p>{{.ImageFilesCount}} image file(s) left to process...</p>
             <p class="bold">{{.ImageFileName}}</p>
@@ -28,11 +30,7 @@
                     </form>
                 </div>
             </div>
-        {{else}}
-            <h1>Done!</h1>
-            <!-- TODO - aesthetics -->
         {{end}}
-
     </div>
     {{template "partial.footer" .}}
 {{end}}
