--- a/service/views/html/partial/header.html
+++ b/service/views/html/partial/header.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{{.Title}} | Imgnheap</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
         <style>
             html {
                 font-family: Tahoma, Arial, Helvetica;
