--- a/service/views/html/partial/header.html
+++ b/service/views/html/partial/header.html
@@ -60,6 +60,38 @@
             .bold {
                 font-weight: bold;
             }
+            .image-container {
+                overflow: auto;
+                max-width: 100%;
+                max-height: 400px;
+            }
+            .image-container img {
+                width: 100%;
+            }
+            .tag-wrapper {
+                display: inline-block;
+            }
+            .tag-wrapper.custom .input-container {
+                display: inline-block;
+            }
+            .tag-wrapper.custom .input-container.text {
+                width: 65%;
+            }
+            .tag-wrapper.custom .input-container.text input {
+                width: 100%;
+                font-size: 1rem;
+                padding: 10px 0 10px 4px;
+            }
+            .tag-wrapper.custom .input-container.button {
+                width: 30%;
+            }
+            .completion {
+                color: #0a9003;
+                font-size: 1.5rem;
+            }
+            .completion .tick .icon {
+                font-size: 4rem;
+            }
         </style>
     </head>
     <body>
